<resources>
    <string name="app_name">SocialTech</string>
    <string name="Titulo">Agenda Telefónica</string>
    <string name="botonAlta">Alta</string>
    <string name="editTextNombre">Nombre*: </string>
    <string name="editTextApellidos">Apellidos: </string>
    <string name="editTextTelefono">Teléfono*: </string>
    <string name="editTextEmail">Email: </string>
    <string name="editTextSexo">Sexo: </string>
    <string name="botonBorrar">Borrar</string>
    <string name="tituloContactos">Contactos</string>
    <string name="numeroTotalContactos">Total: </string>
    <string name="provincia">Provincia: </string>
    <string name="estudios">Títulos: </string>
    <string name="edad">Edad: </string>
    <string name="titulos">SMR,DAM,DAW,ASIR,Ingeniería,Grado,Otros </string>
    <string name="macContactos">Inserte el nombre de un contacto </string>
    <string name="tituloMenuNuevoContacto">Nuevo contacto</string>
    <string name="tituloMenuListaContactos">Lista de contactos</string>
    <string name="editTextDireccion">Direccion:</string>
    <string name="editTextLocalidad">Localidad:</string>
    <string name="editTextProvincia">Provincia:</string>
    <string name="editTextObservaciones">Observaciones:</string>
    <string name="editTextContactoAsociado">Contacto asociado:</string>
    <string name="title_activity_principal">ActivityPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="editTextTelefonoCorp">Tlf. Corporativo*:</string>
    <string name="editTextEmailCorp">Email corp. :</string>
    <string name="etContactoAsociado">Contacto asociado:</string>
    <string name="tituloMenuListaEmpresas">Lista de empresas</string>
    <string name="tituloMenuNuevaEmpresa">Nueva empresa</string>
    <string name="tvNumeroTotalContactos">Numero total de contactos: </string>
    <string name="tvNumeroTotalEmpresas">Numero total de empresas: </string>

</resources>
