<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuOpcionNuevoContacto"
        android:title="@string/tituloMenuNuevoContacto"
        />

    <item
        android:id="@+id/menuOpcionListaContactos"
        android:title="@string/tituloMenuListaContactos"
        />

    <item
        android:id="@+id/action_empresa"
        android:icon="@drawable/ic_action_empresa"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_persona"
        android:icon="@drawable/ic_action_persona"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

</menu>