<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    tools:context="es.vcarmen.agendatelefonica.ActivityPrincipal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextNombre"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        />

    <EditText
        android:id="@+id/nombreContacto"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:maxLength="14"
        android:maxLines="1"
        android:inputType="text"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextApellidos"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        />

    <EditText
        android:id="@+id/apellidosContacto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:maxLength="34"
        android:maxLines="1"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextTelefono"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        />

    <EditText
        android:id="@+id/telefonoContacto"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:maxLength="9"
        android:inputType="phone"
        android:maxLines="1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextSexo"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hombre"
                />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mujer"
                />

            <RadioButton
                android:id="@+id/radioButtonOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Otro"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/botonAlta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/botonAlta"/>

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/botonBorrar"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloContactos"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:paddingTop="24dp"
        android:paddingLeft="5dp"
        android:paddingBottom="14dp"
        />

    <ListView
        android:id="@+id/listaContactos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        />



</LinearLayout>
