<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTextNombre"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                />

            <EditText
                android:id="@+id/etNombreEmpresa"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:maxLength="14"
                android:maxLines="1"
                android:textSize="15dp"
                android:inputType="text"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTextDireccion"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                />

            <EditText
                android:id="@+id/etDireccionEmpresa"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:maxLength="34"
                android:maxLines="1"
                android:textSize="15dp"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTextTelefonoCorp"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                />

            <EditText
                android:id="@+id/etTelefonoCorporativo"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:maxLength="9"
                android:textSize="15dp"
                android:inputType="phone"
                android:maxLines="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTextEmailCorp"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                />

            <EditText
                android:id="@+id/etEmailCorporativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="34"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="15dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etContactoAsociado"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:paddingLeft="5dp"/>

            <AutoCompleteTextView
                android:id="@+id/macContactoAsociado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/macContactos"
                android:textSize="14dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:completionThreshold="1"
                ></AutoCompleteTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provincia"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:paddingLeft="5dp"/>

            <Spinner
                android:id="@+id/spinnerProvincia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                ></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTextLocalidad"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                />

            <EditText
                android:id="@+id/etLocalidadEmpresa"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="15dp"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/editTextObservaciones"/>

            <EditText
                android:id="@+id/etObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkBackground"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:textColor="@color/black"
                android:maxLines="3"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/tvNumeroEmpresas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="12dp"
                android:layout_gravity="right"
                android:text="@string/tvNumeroTotalEmpresas"
                android:layout_margin="3dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/botonAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="@string/botonAlta" />

            <Button
                android:id="@+id/botonBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:padding="5dp"
                android:text="@string/botonBorrar" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>